// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PhoneNumberInput> should match default snapshot 1`] = `
<DocumentFragment>
  <div
    class="PhoneNumberInputStyles__PhoneNumberInputContainer-sc-80kraj-0 hzEdvK"
  >
    <div
      class="PhoneNumberInputStyles__TopRow-sc-80kraj-1 hzWGsb"
      data-invalid="false"
    >
      <button
        aria-controls="downshift-:r0:-menu"
        aria-expanded="false"
        class="PhoneNumberInputStyles__CallingCodeInputToggle-sc-80kraj-2 bollua"
        data-testid="calling-code-input-toggle"
        id="downshift-:r0:-toggle-button"
        tabindex="-1"
        type="button"
      >
        +123
        <span
          class="PhoneNumberInputStyles__CallingCodeInputOpenIndicator-sc-80kraj-3 bQgMvM"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </span>
      </button>
      <input
        aria-label="Mobile Number"
        class="PhoneNumberInputStyles__SignificantNumberInput-sc-80kraj-5 jzSVfN"
        data-invalid="false"
        data-testid="significant-number-input"
        id="significant-number-input-1"
        placeholder="Mobile Number"
        type="tel"
        value=""
      />
      <label
        class="PhoneNumberInputStyles__Label-sc-80kraj-4 blJjKL"
        for="significant-number-input-1"
      >
        Mobile Number
      </label>
      <div
        class="PhoneNumberInputStyles__TopRowAddon-sc-80kraj-6 cNGbWN"
        data-testid="addon"
      />
    </div>
    <div
      class="PhoneNumberInputStyles__CallingCodeInput-sc-80kraj-7 fzYmre"
      data-testid="calling-code-input"
    >
      <div
        class="PhoneNumberInputStyles__CallingCodeFilterInputGroup-sc-80kraj-8 bboEQ"
      >
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-controls="downshift-:r0:-menu"
          aria-expanded="false"
          aria-labelledby="downshift-:r0:-label"
          autocomplete="off"
          class="PhoneNumberInputStyles__CallingCodeFilterInput-sc-80kraj-9 ivyPKY"
          data-testid="calling-code-filter-input"
          id="downshift-:r0:-input"
          placeholder="Type country code or country name"
          role="combobox"
          value=""
        />
      </div>
      <ol
        aria-labelledby="downshift-:r0:-label"
        class="PhoneNumberInputStyles__CallingCodeOptionsList-sc-80kraj-11 knbNaN"
        id="downshift-:r0:-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 kDOeGH"
          id="downshift-:r0:-item-0"
          role="option"
          title="Indonesia"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +62
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Indonesia
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r0:-item-1"
          role="option"
          title="Malaysia"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +60
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Malaysia
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r0:-item-2"
          role="option"
          title="Singapore"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +65
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Singapore
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r0:-item-3"
          role="option"
          title="Taiwan"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +886
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Taiwan
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r0:-item-4"
          role="option"
          title="Vietnam"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +84
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Vietnam
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 fJDtfo"
          id="downshift-:r0:-item-5"
          role="option"
          title="Afghanistan"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +93
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Afghanistan
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r0:-item-6"
          role="option"
          title="Albania"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +355
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Albania
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r0:-item-7"
          role="option"
          title="Algeria"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +213
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Algeria
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r0:-item-8"
          role="option"
          title="Germany"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +42
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Germany
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r0:-item-9"
          role="option"
          title="United States"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +1
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              United States
            </div>
          </div>
        </li>
      </ol>
    </div>
    <div
      class="PhoneNumberInputStyles__Error-sc-80kraj-17 iabqWY"
      data-testid="error"
    />
  </div>
</DocumentFragment>
`;

exports[`<PhoneNumberInput> should match snapshot after input has been made 1`] = `
<DocumentFragment>
  <div
    class="PhoneNumberInputStyles__PhoneNumberInputContainer-sc-80kraj-0 hzEdvK"
  >
    <div
      class="PhoneNumberInputStyles__TopRow-sc-80kraj-1 hzWGsb"
      data-invalid="false"
    >
      <button
        aria-controls="downshift-:r3:-menu"
        aria-expanded="false"
        class="PhoneNumberInputStyles__CallingCodeInputToggle-sc-80kraj-2 bollua"
        data-testid="calling-code-input-toggle"
        id="downshift-:r3:-toggle-button"
        tabindex="-1"
        type="button"
      >
        +123
        <span
          class="PhoneNumberInputStyles__CallingCodeInputOpenIndicator-sc-80kraj-3 bQgMvM"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </span>
      </button>
      <input
        aria-label="Mobile Number"
        class="PhoneNumberInputStyles__SignificantNumberInput-sc-80kraj-5 jzSVfN"
        data-invalid="false"
        data-testid="significant-number-input"
        id="significant-number-input-1"
        placeholder="Mobile Number"
        type="tel"
        value=""
      />
      <label
        class="PhoneNumberInputStyles__Label-sc-80kraj-4 blJjKL"
        for="significant-number-input-1"
      >
        Mobile Number
      </label>
      <div
        class="PhoneNumberInputStyles__TopRowAddon-sc-80kraj-6 cNGbWN"
        data-testid="addon"
      />
    </div>
    <div
      class="PhoneNumberInputStyles__CallingCodeInput-sc-80kraj-7 fzYmre"
      data-testid="calling-code-input"
    >
      <div
        class="PhoneNumberInputStyles__CallingCodeFilterInputGroup-sc-80kraj-8 bboEQ"
      >
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-controls="downshift-:r3:-menu"
          aria-expanded="false"
          aria-labelledby="downshift-:r3:-label"
          autocomplete="off"
          class="PhoneNumberInputStyles__CallingCodeFilterInput-sc-80kraj-9 ivyPKY"
          data-testid="calling-code-filter-input"
          id="downshift-:r3:-input"
          placeholder="Type country code or country name"
          role="combobox"
          value=""
        />
      </div>
      <ol
        aria-labelledby="downshift-:r3:-label"
        class="PhoneNumberInputStyles__CallingCodeOptionsList-sc-80kraj-11 knbNaN"
        id="downshift-:r3:-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 kDOeGH"
          id="downshift-:r3:-item-0"
          role="option"
          title="Indonesia"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +62
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Indonesia
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r3:-item-1"
          role="option"
          title="Malaysia"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +60
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Malaysia
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r3:-item-2"
          role="option"
          title="Singapore"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +65
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Singapore
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r3:-item-3"
          role="option"
          title="Taiwan"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +886
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Taiwan
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r3:-item-4"
          role="option"
          title="Vietnam"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +84
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Vietnam
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 fJDtfo"
          id="downshift-:r3:-item-5"
          role="option"
          title="Afghanistan"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +93
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Afghanistan
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r3:-item-6"
          role="option"
          title="Albania"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +355
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Albania
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r3:-item-7"
          role="option"
          title="Algeria"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +213
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Algeria
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r3:-item-8"
          role="option"
          title="Germany"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +42
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Germany
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r3:-item-9"
          role="option"
          title="United States"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +1
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              United States
            </div>
          </div>
        </li>
      </ol>
    </div>
    <div
      class="PhoneNumberInputStyles__Error-sc-80kraj-17 iabqWY"
      data-testid="error"
    />
  </div>
</DocumentFragment>
`;

exports[`<PhoneNumberInput> should match snapshot when a value is given 1`] = `
<DocumentFragment>
  <div
    class="PhoneNumberInputStyles__PhoneNumberInputContainer-sc-80kraj-0 hzEdvK"
  >
    <div
      class="PhoneNumberInputStyles__TopRow-sc-80kraj-1 hzWGsb"
      data-invalid="false"
    >
      <button
        aria-controls="downshift-:r1:-menu"
        aria-expanded="false"
        class="PhoneNumberInputStyles__CallingCodeInputToggle-sc-80kraj-2 bollua"
        data-testid="calling-code-input-toggle"
        id="downshift-:r1:-toggle-button"
        tabindex="-1"
        type="button"
      >
        +123
        <span
          class="PhoneNumberInputStyles__CallingCodeInputOpenIndicator-sc-80kraj-3 bQgMvM"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </span>
      </button>
      <input
        aria-label="Mobile Number"
        class="PhoneNumberInputStyles__SignificantNumberInput-sc-80kraj-5 erKVtz"
        data-invalid="false"
        data-testid="significant-number-input"
        id="significant-number-input-1"
        placeholder="Mobile Number"
        type="tel"
        value="12345678"
      />
      <label
        class="PhoneNumberInputStyles__Label-sc-80kraj-4 blJjKL"
        for="significant-number-input-1"
      >
        Mobile Number
      </label>
      <div
        class="PhoneNumberInputStyles__TopRowAddon-sc-80kraj-6 cNGbWN"
        data-testid="addon"
      />
    </div>
    <div
      class="PhoneNumberInputStyles__CallingCodeInput-sc-80kraj-7 fzYmre"
      data-testid="calling-code-input"
    >
      <div
        class="PhoneNumberInputStyles__CallingCodeFilterInputGroup-sc-80kraj-8 bboEQ"
      >
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-controls="downshift-:r1:-menu"
          aria-expanded="false"
          aria-labelledby="downshift-:r1:-label"
          autocomplete="off"
          class="PhoneNumberInputStyles__CallingCodeFilterInput-sc-80kraj-9 ivyPKY"
          data-testid="calling-code-filter-input"
          id="downshift-:r1:-input"
          placeholder="Type country code or country name"
          role="combobox"
          value=""
        />
      </div>
      <ol
        aria-labelledby="downshift-:r1:-label"
        class="PhoneNumberInputStyles__CallingCodeOptionsList-sc-80kraj-11 knbNaN"
        id="downshift-:r1:-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 kDOeGH"
          id="downshift-:r1:-item-0"
          role="option"
          title="Indonesia"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +62
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Indonesia
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r1:-item-1"
          role="option"
          title="Malaysia"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +60
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Malaysia
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r1:-item-2"
          role="option"
          title="Singapore"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +65
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Singapore
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r1:-item-3"
          role="option"
          title="Taiwan"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +886
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Taiwan
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r1:-item-4"
          role="option"
          title="Vietnam"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +84
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Vietnam
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 fJDtfo"
          id="downshift-:r1:-item-5"
          role="option"
          title="Afghanistan"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +93
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Afghanistan
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r1:-item-6"
          role="option"
          title="Albania"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +355
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Albania
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r1:-item-7"
          role="option"
          title="Algeria"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +213
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Algeria
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r1:-item-8"
          role="option"
          title="Germany"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +42
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Germany
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r1:-item-9"
          role="option"
          title="United States"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +1
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              United States
            </div>
          </div>
        </li>
      </ol>
    </div>
    <div
      class="PhoneNumberInputStyles__Error-sc-80kraj-17 iabqWY"
      data-testid="error"
    />
  </div>
</DocumentFragment>
`;

exports[`<PhoneNumberInput> should render an empty state when loading 1`] = `
<DocumentFragment>
  <div
    class="PhoneNumberInputStyles__PhoneNumberInputContainer-sc-80kraj-0 hzEdvK"
  >
    <div
      class="PhoneNumberInputStyles__TopRow-sc-80kraj-1 hzWGsb"
      data-invalid="false"
    >
      <button
        aria-controls="downshift-:r7:-menu"
        aria-expanded="false"
        class="PhoneNumberInputStyles__CallingCodeInputToggle-sc-80kraj-2 bollua"
        data-testid="calling-code-input-toggle"
        id="downshift-:r7:-toggle-button"
        tabindex="-1"
        type="button"
      >
        +123
        <span
          class="PhoneNumberInputStyles__CallingCodeInputOpenIndicator-sc-80kraj-3 bQgMvM"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.8 80.8 0 69 50 19 100 69 88.2 80.8 50 42.4"
            />
          </svg>
        </span>
      </button>
      <input
        aria-label="Mobile Number"
        class="PhoneNumberInputStyles__SignificantNumberInput-sc-80kraj-5 jzSVfN"
        data-invalid="false"
        data-testid="significant-number-input"
        id="significant-number-input-1"
        placeholder="Mobile Number"
        type="tel"
        value=""
      />
      <label
        class="PhoneNumberInputStyles__Label-sc-80kraj-4 blJjKL"
        for="significant-number-input-1"
      >
        Mobile Number
      </label>
      <div
        class="PhoneNumberInputStyles__TopRowAddon-sc-80kraj-6 cNGbWN"
        data-testid="addon"
      />
    </div>
    <div
      class="PhoneNumberInputStyles__CallingCodeInput-sc-80kraj-7 jMbDaT"
      data-testid="calling-code-input"
    >
      <div
        class="PhoneNumberInputStyles__CallingCodeFilterInputGroup-sc-80kraj-8 bboEQ"
      >
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-controls="downshift-:r7:-menu"
          aria-expanded="false"
          aria-labelledby="downshift-:r7:-label"
          autocomplete="off"
          class="PhoneNumberInputStyles__CallingCodeFilterInput-sc-80kraj-9 ivyPKY"
          data-testid="calling-code-filter-input"
          id="downshift-:r7:-input"
          placeholder="Type country code or country name"
          role="combobox"
          value=""
        />
        <div
          aria-busy="true"
          aria-live="polite"
          class="LoadingStyle__LoadingContainer-sc-fg2qx3-0 dTLHiG aries-loading PhoneNumberInputStyles__CallingCodeInputLoading-sc-80kraj-10 jNhPMw"
          data-testid="calling-code-options-loading"
          role="alert"
        >
          <div
            class="LoadingStyle__Spinner-sc-fg2qx3-1 jHIaBd"
          />
        </div>
      </div>
      <ol
        aria-labelledby="downshift-:r7:-label"
        class="PhoneNumberInputStyles__CallingCodeOptionsList-sc-80kraj-11 knbNaN"
        id="downshift-:r7:-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 kDOeGH"
          id="downshift-:r7:-item-0"
          role="option"
          title="Indonesia"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +62
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Indonesia
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r7:-item-1"
          role="option"
          title="Malaysia"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +60
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Malaysia
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r7:-item-2"
          role="option"
          title="Singapore"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +65
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Singapore
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r7:-item-3"
          role="option"
          title="Taiwan"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +886
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Taiwan
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r7:-item-4"
          role="option"
          title="Vietnam"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +84
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Vietnam
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 fJDtfo"
          id="downshift-:r7:-item-5"
          role="option"
          title="Afghanistan"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +93
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Afghanistan
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r7:-item-6"
          role="option"
          title="Albania"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +355
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Albania
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r7:-item-7"
          role="option"
          title="Algeria"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +213
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Algeria
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r7:-item-8"
          role="option"
          title="Germany"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +42
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Germany
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r7:-item-9"
          role="option"
          title="United States"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +1
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              United States
            </div>
          </div>
        </li>
      </ol>
    </div>
    <div
      class="PhoneNumberInputStyles__Error-sc-80kraj-17 iabqWY"
      data-testid="error"
    />
  </div>
</DocumentFragment>
`;

exports[`<PhoneNumberInput> should render an empty state when there are no calling code options 1`] = `
<DocumentFragment>
  <div
    class="PhoneNumberInputStyles__PhoneNumberInputContainer-sc-80kraj-0 hzEdvK"
  >
    <div
      class="PhoneNumberInputStyles__TopRow-sc-80kraj-1 hzWGsb"
      data-invalid="false"
    >
      <button
        aria-controls="downshift-:r6:-menu"
        aria-expanded="false"
        class="PhoneNumberInputStyles__CallingCodeInputToggle-sc-80kraj-2 bollua"
        data-testid="calling-code-input-toggle"
        id="downshift-:r6:-toggle-button"
        tabindex="-1"
        type="button"
      >
        +123
        <span
          class="PhoneNumberInputStyles__CallingCodeInputOpenIndicator-sc-80kraj-3 bQgMvM"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.8 80.8 0 69 50 19 100 69 88.2 80.8 50 42.4"
            />
          </svg>
        </span>
      </button>
      <input
        aria-label="Mobile Number"
        class="PhoneNumberInputStyles__SignificantNumberInput-sc-80kraj-5 jzSVfN"
        data-invalid="false"
        data-testid="significant-number-input"
        id="significant-number-input-1"
        placeholder="Mobile Number"
        type="tel"
        value=""
      />
      <label
        class="PhoneNumberInputStyles__Label-sc-80kraj-4 blJjKL"
        for="significant-number-input-1"
      >
        Mobile Number
      </label>
      <div
        class="PhoneNumberInputStyles__TopRowAddon-sc-80kraj-6 cNGbWN"
        data-testid="addon"
      />
    </div>
    <div
      class="PhoneNumberInputStyles__CallingCodeInput-sc-80kraj-7 jMbDaT"
      data-testid="calling-code-input"
    >
      <div
        class="PhoneNumberInputStyles__CallingCodeFilterInputGroup-sc-80kraj-8 bboEQ"
      >
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-controls="downshift-:r6:-menu"
          aria-expanded="false"
          aria-labelledby="downshift-:r6:-label"
          autocomplete="off"
          class="PhoneNumberInputStyles__CallingCodeFilterInput-sc-80kraj-9 ivyPKY"
          data-testid="calling-code-filter-input"
          id="downshift-:r6:-input"
          placeholder="Type country code or country name"
          role="combobox"
          value=""
        />
      </div>
      <ol
        aria-labelledby="downshift-:r6:-label"
        class="PhoneNumberInputStyles__CallingCodeOptionsList-sc-80kraj-11 knbNaN"
        id="downshift-:r6:-menu"
        role="listbox"
      >
        <div
          class="PhoneNumberInputStyles__NoOptions-sc-80kraj-16 VaNAw"
          data-testid="no-options"
        >
          Sorry, there are no results
        </div>
      </ol>
    </div>
    <div
      class="PhoneNumberInputStyles__Error-sc-80kraj-17 iabqWY"
      data-testid="error"
    />
  </div>
</DocumentFragment>
`;

exports[`<PhoneNumberInput> should render the given addon 1`] = `
<DocumentFragment>
  <div
    class="PhoneNumberInputStyles__PhoneNumberInputContainer-sc-80kraj-0 hzEdvK"
  >
    <div
      class="PhoneNumberInputStyles__TopRow-sc-80kraj-1 hzWGsb"
      data-invalid="false"
    >
      <button
        aria-controls="downshift-:r5:-menu"
        aria-expanded="false"
        class="PhoneNumberInputStyles__CallingCodeInputToggle-sc-80kraj-2 bollua"
        data-testid="calling-code-input-toggle"
        id="downshift-:r5:-toggle-button"
        tabindex="-1"
        type="button"
      >
        +123
        <span
          class="PhoneNumberInputStyles__CallingCodeInputOpenIndicator-sc-80kraj-3 bQgMvM"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </span>
      </button>
      <input
        aria-label="Mobile Number"
        class="PhoneNumberInputStyles__SignificantNumberInput-sc-80kraj-5 jzSVfN"
        data-invalid="false"
        data-testid="significant-number-input"
        id="significant-number-input-1"
        placeholder="Mobile Number"
        type="tel"
        value=""
      />
      <label
        class="PhoneNumberInputStyles__Label-sc-80kraj-4 blJjKL"
        for="significant-number-input-1"
      >
        Mobile Number
      </label>
      <div
        class="PhoneNumberInputStyles__TopRowAddon-sc-80kraj-6 cNGbWN"
        data-testid="addon"
      >
        <div
          class="TagStyle__TagContainer-sc-66xi2f-1 kZQYsU aries-tag"
          role="presentation"
          tabindex="0"
        >
          <label
            class="TagStyle__TagContent-sc-66xi2f-0 lkuJWS tag-content"
            tabindex="-1"
          >
            Foo
          </label>
        </div>
      </div>
    </div>
    <div
      class="PhoneNumberInputStyles__CallingCodeInput-sc-80kraj-7 fzYmre"
      data-testid="calling-code-input"
    >
      <div
        class="PhoneNumberInputStyles__CallingCodeFilterInputGroup-sc-80kraj-8 bboEQ"
      >
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-controls="downshift-:r5:-menu"
          aria-expanded="false"
          aria-labelledby="downshift-:r5:-label"
          autocomplete="off"
          class="PhoneNumberInputStyles__CallingCodeFilterInput-sc-80kraj-9 ivyPKY"
          data-testid="calling-code-filter-input"
          id="downshift-:r5:-input"
          placeholder="Type country code or country name"
          role="combobox"
          value=""
        />
      </div>
      <ol
        aria-labelledby="downshift-:r5:-label"
        class="PhoneNumberInputStyles__CallingCodeOptionsList-sc-80kraj-11 knbNaN"
        id="downshift-:r5:-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 kDOeGH"
          id="downshift-:r5:-item-0"
          role="option"
          title="Indonesia"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +62
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Indonesia
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r5:-item-1"
          role="option"
          title="Malaysia"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +60
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Malaysia
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r5:-item-2"
          role="option"
          title="Singapore"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +65
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Singapore
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r5:-item-3"
          role="option"
          title="Taiwan"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +886
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Taiwan
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r5:-item-4"
          role="option"
          title="Vietnam"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +84
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Vietnam
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 fJDtfo"
          id="downshift-:r5:-item-5"
          role="option"
          title="Afghanistan"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +93
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Afghanistan
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r5:-item-6"
          role="option"
          title="Albania"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +355
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Albania
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r5:-item-7"
          role="option"
          title="Algeria"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +213
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Algeria
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r5:-item-8"
          role="option"
          title="Germany"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +42
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Germany
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r5:-item-9"
          role="option"
          title="United States"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +1
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              United States
            </div>
          </div>
        </li>
      </ol>
    </div>
    <div
      class="PhoneNumberInputStyles__Error-sc-80kraj-17 iabqWY"
      data-testid="error"
    />
  </div>
</DocumentFragment>
`;

exports[`<PhoneNumberInput> should render the given error 1`] = `
<DocumentFragment>
  <div
    class="PhoneNumberInputStyles__PhoneNumberInputContainer-sc-80kraj-0 hzEdvK"
  >
    <div
      class="PhoneNumberInputStyles__TopRow-sc-80kraj-1 hzWGsb"
      data-invalid="true"
    >
      <button
        aria-controls="downshift-:r4:-menu"
        aria-expanded="false"
        class="PhoneNumberInputStyles__CallingCodeInputToggle-sc-80kraj-2 bollua"
        data-testid="calling-code-input-toggle"
        id="downshift-:r4:-toggle-button"
        tabindex="-1"
        type="button"
      >
        +123
        <span
          class="PhoneNumberInputStyles__CallingCodeInputOpenIndicator-sc-80kraj-3 bQgMvM"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </span>
      </button>
      <input
        aria-label="Mobile Number"
        class="PhoneNumberInputStyles__SignificantNumberInput-sc-80kraj-5 jzSVfN"
        data-invalid="true"
        data-testid="significant-number-input"
        id="significant-number-input-1"
        placeholder="Mobile Number"
        type="tel"
        value=""
      />
      <label
        class="PhoneNumberInputStyles__Label-sc-80kraj-4 blJjKL"
        for="significant-number-input-1"
      >
        Mobile Number
      </label>
      <div
        class="PhoneNumberInputStyles__TopRowAddon-sc-80kraj-6 cNGbWN"
        data-testid="addon"
      />
    </div>
    <div
      class="PhoneNumberInputStyles__CallingCodeInput-sc-80kraj-7 fzYmre"
      data-testid="calling-code-input"
    >
      <div
        class="PhoneNumberInputStyles__CallingCodeFilterInputGroup-sc-80kraj-8 bboEQ"
      >
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-controls="downshift-:r4:-menu"
          aria-expanded="false"
          aria-labelledby="downshift-:r4:-label"
          autocomplete="off"
          class="PhoneNumberInputStyles__CallingCodeFilterInput-sc-80kraj-9 ivyPKY"
          data-testid="calling-code-filter-input"
          id="downshift-:r4:-input"
          placeholder="Type country code or country name"
          role="combobox"
          value=""
        />
      </div>
      <ol
        aria-labelledby="downshift-:r4:-label"
        class="PhoneNumberInputStyles__CallingCodeOptionsList-sc-80kraj-11 knbNaN"
        id="downshift-:r4:-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 kDOeGH"
          id="downshift-:r4:-item-0"
          role="option"
          title="Indonesia"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +62
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Indonesia
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r4:-item-1"
          role="option"
          title="Malaysia"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +60
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Malaysia
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r4:-item-2"
          role="option"
          title="Singapore"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +65
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Singapore
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r4:-item-3"
          role="option"
          title="Taiwan"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +886
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Taiwan
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r4:-item-4"
          role="option"
          title="Vietnam"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +84
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Vietnam
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 fJDtfo"
          id="downshift-:r4:-item-5"
          role="option"
          title="Afghanistan"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +93
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Afghanistan
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r4:-item-6"
          role="option"
          title="Albania"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +355
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Albania
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r4:-item-7"
          role="option"
          title="Algeria"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +213
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Algeria
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r4:-item-8"
          role="option"
          title="Germany"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +42
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Germany
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r4:-item-9"
          role="option"
          title="United States"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +1
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              United States
            </div>
          </div>
        </li>
      </ol>
    </div>
    <div
      class="PhoneNumberInputStyles__Error-sc-80kraj-17 iabqWY"
      data-testid="error"
    >
      You dun goofed
    </div>
  </div>
</DocumentFragment>
`;

exports[`<PhoneNumberInput> should toggle the calling code input on clicking the toggle button 1`] = `
<DocumentFragment>
  <div
    class="PhoneNumberInputStyles__PhoneNumberInputContainer-sc-80kraj-0 hzEdvK"
  >
    <div
      class="PhoneNumberInputStyles__TopRow-sc-80kraj-1 hzWGsb"
      data-invalid="false"
    >
      <button
        aria-controls="downshift-:r2:-menu"
        aria-expanded="false"
        class="PhoneNumberInputStyles__CallingCodeInputToggle-sc-80kraj-2 bollua"
        data-testid="calling-code-input-toggle"
        id="downshift-:r2:-toggle-button"
        tabindex="-1"
        type="button"
      >
        +123
        <span
          class="PhoneNumberInputStyles__CallingCodeInputOpenIndicator-sc-80kraj-3 bQgMvM"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.8 80.8 0 69 50 19 100 69 88.2 80.8 50 42.4"
            />
          </svg>
        </span>
      </button>
      <input
        aria-label="Mobile Number"
        class="PhoneNumberInputStyles__SignificantNumberInput-sc-80kraj-5 jzSVfN"
        data-invalid="false"
        data-testid="significant-number-input"
        id="significant-number-input-1"
        placeholder="Mobile Number"
        type="tel"
        value=""
      />
      <label
        class="PhoneNumberInputStyles__Label-sc-80kraj-4 blJjKL"
        for="significant-number-input-1"
      >
        Mobile Number
      </label>
      <div
        class="PhoneNumberInputStyles__TopRowAddon-sc-80kraj-6 cNGbWN"
        data-testid="addon"
      />
    </div>
    <div
      class="PhoneNumberInputStyles__CallingCodeInput-sc-80kraj-7 jMbDaT"
      data-testid="calling-code-input"
    >
      <div
        class="PhoneNumberInputStyles__CallingCodeFilterInputGroup-sc-80kraj-8 bboEQ"
      >
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-controls="downshift-:r2:-menu"
          aria-expanded="false"
          aria-labelledby="downshift-:r2:-label"
          autocomplete="off"
          class="PhoneNumberInputStyles__CallingCodeFilterInput-sc-80kraj-9 ivyPKY"
          data-testid="calling-code-filter-input"
          id="downshift-:r2:-input"
          placeholder="Type country code or country name"
          role="combobox"
          value=""
        />
      </div>
      <ol
        aria-labelledby="downshift-:r2:-label"
        class="PhoneNumberInputStyles__CallingCodeOptionsList-sc-80kraj-11 knbNaN"
        id="downshift-:r2:-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 kDOeGH"
          id="downshift-:r2:-item-0"
          role="option"
          title="Indonesia"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +62
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Indonesia
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r2:-item-1"
          role="option"
          title="Malaysia"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +60
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Malaysia
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r2:-item-2"
          role="option"
          title="Singapore"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +65
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Singapore
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r2:-item-3"
          role="option"
          title="Taiwan"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +886
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Taiwan
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r2:-item-4"
          role="option"
          title="Vietnam"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +84
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Vietnam
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 fJDtfo"
          id="downshift-:r2:-item-5"
          role="option"
          title="Afghanistan"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +93
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Afghanistan
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r2:-item-6"
          role="option"
          title="Albania"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +355
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Albania
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r2:-item-7"
          role="option"
          title="Algeria"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +213
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Algeria
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r2:-item-8"
          role="option"
          title="Germany"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +42
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              Germany
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="PhoneNumberInputStyles__CallingCodeOption-sc-80kraj-12 jWUcAm"
          id="downshift-:r2:-item-9"
          role="option"
          title="United States"
        >
          <div
            class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
          >
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionCallingCode-sc-80kraj-13 jUUhvS"
            >
              +1
            </div>
            <div
              class="PhoneNumberInputStyles__CallingCodeOptionLabel-sc-80kraj-14 fwPJPv"
            >
              United States
            </div>
          </div>
        </li>
      </ol>
    </div>
    <div
      class="PhoneNumberInputStyles__Error-sc-80kraj-17 iabqWY"
      data-testid="error"
    />
  </div>
</DocumentFragment>
`;
